# plexloader

./: .gitignore  Cargo.toml
plexloader_cli/: Cargo.toml
plexloader_cli/src/: commands.rs  main.rs  utils.rs
plexloader_cli/src/commands/: download.rs  info.rs  login.rs  play.rs
plexloader_cli/src/commands/download/: link.rs  sections.rs  servers.rs
plexloader_cli/src/commands/info/: link.rs  sections.rs  servers.rs
plexloader_cli/src/utils/: fs.rs  term.rs
plexloader_gui/plexloader_tauri/: Cargo.toml  tauri.conf.json
plexloader_gui/plexloader_tauri/src/: commands.rs  error.rs  main.rs
plexloader_gui/plexloader_tauri/src/commands/: check_login.rs  get_media.rs  login.rs  play_media.rs
plexloader_gui/plexloader_tauri/src/utils/: fs.rs
plexloader_gui/ui/: index.html  package.json
plexloader_gui/ui/src/: App.tsx  icons.ts  router.tsx
plexloader_gui/ui/src/backend/: PlexLoaderAPI.ts  TauriBackend.ts  index.ts
plexloader_gui/ui/src/components/: AppToasts.tsx  CheckAuth.tsx  EmptyResource.tsx  LinkInfo.tsx  Login.tsx  PlexDirectoryResourceInfo.tsx  PlexMediaResourceInfo.tsx  PlexResourceItem.tsx  PlexVideoResourceInfo.tsx
plexloader_lib/: Cargo.toml
plexloader_lib/src/: constants.rs  downloader.rs  interfaces.rs  lib.rs  loader.rs  utils.rs
plexloader_lib/src/downloader/: login.rs  network.rs
plexloader_lib/src/interfaces/: error.rs  login.rs  media.rs  resource.rs  season.rs  section.rs  server.rs  show.rs  user.rs
plexloader_lib/src/loader/: downloader.rs  network.rs  player.rs
plexloader_lib/src/utils/: fs.rs
(+11 files in other folders)
