[package]
name = "plexloader_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plexloader_lib = { path = "../plexloader_lib" }
clap = { version = "3.2.8", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
anyhow = "1.0.58"
directories = "4.0.1"
console = "0.15.0"
dialoguer = "0.10.1"
