[package]
name = "plexloader_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.138", features = ["derive"] }
url = "2.2.2"
ureq = { version = "2.4.0", features = ["json"] }
